--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ li{
 
 
 .shapka{
+
 	margin: 0 auto;
 	z-index: 101;
 	background:rgb(59, 64, 73);
@@ -50,6 +51,8 @@ li{
 
 	position: sticky;
 	top: 0;
+	left: 0;
+	right: 0;
 	margin-top: 0 ;
 }
 
@@ -913,6 +916,9 @@ li{
 }
 .foot{
 	position: relative;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	float: left;
 	width: 100%;
 	height: 150px;
