--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ li{
 	background:rgb(59, 64, 73);
 	width: 100%;
 
-	position: sticky;
+	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -1196,7 +1196,7 @@ text-decoration: underline skyblue;
 	.shapka{
 
 		position: relative;
-		height: 200px;
+		height: 70px;
 
 	}
 	.header_nav{
