--- a/phone.css
+++ b/phone.css
@@ -7,10 +7,11 @@
 	.shapka {
         position: static;
         margin: 0 ;
-        height: 10vh;
+        height: 70px;
         width: 100%;
     }
-    .logo {
+    .logo { 
+        display: none;
     }
     .head {
         display: none;
@@ -45,7 +46,6 @@
     .background1 {
         margin: 0;
         width: 100%;
-        height: 80vh;
     }
     .header_nav {
         width: 100%;
@@ -164,10 +164,10 @@
     .boton {
     }
     .foot {
-        height: 10vh;
         width: 100%;
     }
     .logo2 {
+        display: none;
     }
     .discription {
         display: none;
